Colab을 통해 생성됨

--- a/inclass/07w_easy_ch07_0421_missingvalue_outlier_.ipynb
+++ b/inclass/07w_easy_ch07_0421_missingvalue_outlier_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC8rjaSSoUc8GSb6PgjfRa",
+      "authorship_tag": "ABX9TyNHqtXXWa15AJ1fMbZKmUeE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7609,7 +7609,7 @@
       "cell_type": "code",
       "source": [
         "# 180쪽\n",
-        "# boxplot"
+        "# boxplot , 6장 ~ 7징"
       ],
       "metadata": {
         "id": "gfcxh11d6vSw"
